[package]
name = "java-spaghetti-gen"
version = "0.2.0"
edition = "2021"
description = "Code generator for binding to JVM APIs from Rust"
repository = "https://github.com/Dirbaio/java-spaghetti"
keywords = ["jvm", "jni", "bindgen", "android"]
categories = ["development-tools::ffi"]
license = "MIT OR Apache-2.0"

[dependencies]
jreflection             = "0.0.11"
clap                    = { version = "4", features = ["derive"] }
bitflags                = "2.4.2"
serde                   = "1.0.197"
serde_derive            = "1.0.197"
toml                    = "0.8.10"
zip                     = "0.6.6"

[dev-dependencies]
jni-sys                 = "0.4.0"
