[package]
name = "java-spaghetti-gen"
version = "0.2.0"
edition = "2024"
description = "Code generator for binding to JVM APIs from Rust"
repository = "https://github.com/Dirbaio/java-spaghetti"
keywords = ["jvm", "jni", "bindgen", "android"]
categories = ["development-tools::ffi"]
license = "MIT OR Apache-2.0"

[dependencies]
cafebabe = "0.9.0"
clap = { version = "4", features = ["derive"] }
bitflags = "2.8.0"
serde = "1.0.197"
serde_derive = "1.0.197"
toml = "0.8.10"
zip = "4.1.0"
quote = "1.0.40"
proc-macro2 = "1.0.95"
anyhow = "1.0.98"

[dev-dependencies]
jni-sys  = "0.4.0"
