[package]
name = "jni-glue"
version = "0.0.10"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2021"
description = "Manually written glue code to accompany the jni-bindgen code generator for binding to JVM APIs from Rust"
documentation = "https://docs.rs/jni-glue/"
repository = "https://github.com/MaulingMonkey/jni-bindgen"
keywords = ["jvm", "jni", "bindgen", "android"]
categories = ["external-ffi-bindings"]
license = "MIT OR Apache-2.0"
include = ["/**/*.rs", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE"]


[dependencies]
jni-sys = "0.4.0"
